attempt 1 to fix contact button click on mobile devices

--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -418,6 +418,7 @@ section {
       top: 83px;
       left: 56px;
       width: auto;
+      z-index: 5000;
     }
 
     .header_wrapper {
